tests/cases/smoke/invalid/func_duplicate_named_arg.dp
func greet(name: str, title: str = "Mr") -> str = title + " " + name
var bad = greet(name: "Youniss", title: "Mr", title: "Dr")
